8-4 fixed header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ h1 {
 	width: 325px;
 	height: 50px;
 	padding: 10px;
-	left: 50;
+	left: 50px;
 	font-family: Georgia, Times, serif;
 	font-size: 24px;
 	text-align: center;
@@ -36,7 +36,6 @@ h1 {
 
 h2 {
 	font-family: Georgia, Times, serif;
-	text-indent: 10px;
 	color: #4aaaa5;
 	}
 
@@ -55,13 +54,13 @@ span.navigationSpace {
 	}
 
 .pagebody {
-	height: 1500px;
+	height: 1000px;
 	}
 
 .about {
 	position: absolute;
 	top: 100px;
-	margin-left: 50px;
+	left: 50px;
 	padding: 20px;
 	width: 650px;
 	height: 400px;
@@ -83,16 +82,14 @@ p {
 
 .portfolio {
 	position: absolute;
-	overflow: auto;
 	top: 100px;
-	margin-left: 50px;
+	left: 50px;
 	padding: 20px;
 	width: 650px;
 	height: 775px;
 	border-width: 5px;
 	border-color: #CDCDCD;
 	background: #ffffff;
-	color: #4aaaa5;
 	}
 
 .pictureblock {
@@ -117,7 +114,7 @@ figcaption {
 form {
 	position: absolute;
 	top: 100px;
-	margin-left: 50px;
+	left: 50px;
 	padding: 20px;
 	width: 650px;
 	height: 500px;
